--- a/build.gradle
+++ b/build.gradle
@@ -6,15 +6,15 @@ buildscript {
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-
+        classpath 'com.android.tools.build:gradle:8.0.0'
         def nav_version = "2.5.3"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
 plugins {
-    id 'com.android.application' version '7.4.2' apply false
-    id 'com.android.library' version '7.4.2' apply false
+    id 'com.android.application' version '8.0.0' apply false
+    id 'com.android.library' version '8.0.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
 }
 
