--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     // Serialization
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0'
 
+    // Phone number formatting
+    implementation 'com.googlecode.libphonenumber:libphonenumber:8.12.36'
 }
 
 //repositories {
