--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         minSdk 25
         targetSdk 33
         versionCode 1
-        versionName "1.0"
+        versionName "1.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
@@ -69,9 +69,11 @@ dependencies {
 
     // Serialization
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0'
-
+    implementation 'com.google.code.gson:gson:2.8.9'
+    
     // Phone number formatting
     implementation 'com.googlecode.libphonenumber:libphonenumber:8.12.36'
+
 }
 
 //repositories {
