Bunch-o-fixes Update
Dev Mode
Start Auto-update
Ask about setting winners before levelling up
Tie state on winners
Game winner decision between rounds
CallChoice function

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,8 @@ dependencies {
     // Phone number formatting
     implementation 'com.googlecode.libphonenumber:libphonenumber:8.12.36'
 
+    // Networking for auto-update
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
 }
 
 //repositories {
